--- a/src/templates/screens/MoveIssue.vm
+++ b/src/templates/screens/MoveIssue.vm
@@ -8,7 +8,7 @@ $page.setTitle("Copy / Move Issue")
 #set ($issueId = $data.Parameters.getString("id"))
 #set ($issue = $scarabR.getIssue($issueId))
 <form method="post" action="$action">
-<input type="hidden" name="id" value="$issueId">
+<input type="hidden" name="id" value="$issueId" />
 <div class="functnbar"><table cellpadding="4" cellspacing="0" border="1">
  <tr>
   <td class="firstchild"><input type="submit" value="Next" name="eventSubmit_doMapattributes" /></td>
