--- a/src/templates/screens/SaveTemplate.vm
+++ b/src/templates/screens/SaveTemplate.vm
@@ -20,7 +20,7 @@ $page.setTitle("Issue Template")
             <th>Template Name</th>
             <td>
              #fieldErrorMsg($templateGroup.Name "")
-            <input type="text" size="25" value="$!templateGroup.Name" name="$templateGroup.Name.Key"/>
+            <input type="text" size="25" value="$!templateGroup.Name" name="$templateGroup.Name.Key" />
             </td>
        </tr>
        <tr>
@@ -95,9 +95,9 @@ $page.setTitle("Issue Template")
 </table>
 </div>
 <p class="functnbar">
-<input type="submit" value="save details" name="eventSubmit_doSubmit" />&#160;
-<input type="submit" value="cancel" name="eventSubmit_doCancel"  />&#160;
-<input type="submit" value="clear form" />
+<input type="submit" value="Save details" name="eventSubmit_doSubmit" />&#160;
+<input type="submit" value="Cancel" name="eventSubmit_doCancel"  />&#160;
+<input type="submit" value="Clear form" />
 </p>
 $intake.declareGroups()
 </form>
