--- a/src/templates/screens/reports/Report_1.vm
+++ b/src/templates/screens/reports/Report_1.vm
@@ -21,10 +21,10 @@
 #set ( $action = $link.setPage("Links.vm").setAction("GenerateReport") )
 <form method="get" action="$action">
 <p class="functnbar">
-    <input type="submit" value="save this report"
+    <input type="submit" value="Save this report"
         name="eventSubmit_doSavereport" />&nbsp;
-    <input type="submit" value="print" name="eventSubmit_doPrint" />&nbsp;
-    <input type="submit" value="done" name="eventSubmit_doCancel" />
+    <input type="submit" value="Print" name="eventSubmit_doPrint" />&nbsp;
+    <input type="submit" value="Done" name="eventSubmit_doCancel" />
 </p>
 #addReportHiddenInputs($report "reports,Report_1.vm")
 $intake.declareGroups()
