--- a/src/templates/screens/reports/Step1.vm
+++ b/src/templates/screens/reports/Step1.vm
@@ -62,7 +62,7 @@ If so,  enter the following information (it can be edited later).
  </table>
 </div>
 <p class="functnbar">
-    <input type="submit" value="continue" name="eventSubmit_doStep1" />
+    <input type="submit" value="Continue" name="eventSubmit_doStep1" />
 </p>
 #addReportHiddenInputs($report "reports,Step1.vm")
 $intake.declareGroups()
