--- a/src/templates/screens/reports/Step3_1b.vm
+++ b/src/templates/screens/reports/Step3_1b.vm
@@ -57,7 +57,7 @@
     <input type="submit" value="Generate report"
             name="eventSubmit_doStep3_1b" />
     &nbsp;
-    <input type="submit" value="cancel" name="eventSubmit_doCancel" />
+    <input type="submit" value="Cancel" name="eventSubmit_doCancel" />
 </p>
 #addReportHiddenInputs($report "reports,Step3_1b.vm")
 $intake.declareGroups()
